<resources>
    <string name="LOGIN_SESSION">com.example.Aramoolah.LOGIN_SESSION</string>

    <string name="app_name">Aramoolah</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="history_fragment_label">History</string>
    <string name="add_transaction_fragment_label">Add Transaction</string>
    <string name="dashboard_fragment_label">Dashboard</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    // fragment_bookkeeping_add_transaction
    <string-array name="wallet">
        <item>Cash</item>
        <item>Bank</item>
    </string-array>
    <string-array name="transaction_type">
        <item>+</item>
        <item>-</item>
    </string-array>
    <string name="nothing_selected_layout_text">"Select one …"</string>


    // history_fragment
    <string name="total_amount_symbol">Σ</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_history">History</string>

    // add_wallet_fragment
    <string name="add_wallet_fragment_label">Add Wallet</string>
    <string name="add_wallet_fragment_initial_value_hint">Initial value</string>
    <string name="add_transaction_fragment_cost_hint">Cost</string>
    <string name="add_wallet_fragment_account_name_hint">Wallet name</string>

    // add_user_fragment
    <string name="add_user_first_name_hint">First name</string>
    <string name="add_user_middle_name_hint">Middle name (Optional)</string>
    <string name="add_user_last_name_hint">Last name</string>
    <string name="add_user_email_hint">Email</string>
    <string name="add_user_password_hint">Pin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_item_category_hint">Item category name</string>
    <string name="add_item_hint">Item name</string>
</resources>